<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.berber.orange.memories.login.activity.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pick_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        android:layout_above="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />


    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edittext"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edittext"

        android:hint="@string/prompt_email"

        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"

        android:layout_height="40dp"
        android:layout_above="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edittext"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"

        android:layout_height="40dp"
        android:layout_above="@+id/sign_up_start_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edittext"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/sign_up_start_button"
        style="?android:textAppearanceSmall"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_button_bg"
        android:text="Create Account"
        android:textStyle="bold" />


</RelativeLayout>
